--- a/utils/refind.conf
+++ b/utils/refind.conf
@@ -12,6 +12,6 @@ menuentry "[nx]" {
 		# change the UUID when making an image, so this is always valid.
         volume  871A56D0-2069-EE41-AC8E-0B67C148A150
 
-        loader  /nxkernel
+        loader  /fxloader-efi
         options "rw root=UUID=871A56D0-2069-EE41-AC8E-0B67C148A150"
 }
