--- a/utils/refind.conf
+++ b/utils/refind.conf
@@ -13,5 +13,5 @@ menuentry "[nx]" {
 	volume  871A56D0-2069-EE41-AC8E-0B67C148A150
 
 	loader  /boot/efxloader
-	options "rw root=UUID=871A56D0-2069-EE41-AC8E-0B67C148A150"
+	options "graphical root=UUID(871A56D0-2069-EE41-AC8E-0B67C148A150)"
 }
