--- a/libs/libc/makefile
+++ b/libs/libc/makefile
@@ -26,6 +26,7 @@ install: all headers
 all: $(SYSROOT)/usr/lib/libc.a
 
 $(SYSROOT)/usr/lib/libc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
+	@echo "# libc"
 	@$(AR) rcs $(SYSROOT)/usr/lib/libc.a $(COBJ) $(CXXOBJ) source/platform/jmp/longjmp.s.o source/platform/jmp/setjmp.s.o source/platform/support/crti.s.o source/platform/support/crtn.s.o source/platform/syscall/helper.s.o
 	@cp $(SYSROOT)/usr/lib/libc.a $(SYSROOT)/usr/lib/libg.a
 	@cp source/platform/support/crt0.s.o $(SYSROOT)/usr/lib/crt0.o
@@ -33,22 +34,15 @@ $(SYSROOT)/usr/lib/libc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
 	@cp source/platform/support/crtn.s.o $(SYSROOT)/usr/lib/crtn.o
 
 %.c.o: %.c
+	@echo "# $(notdir $<)"
 	@$(CC) $(CFLAGS) -o $@ $<
 
-	@$(eval DONEFILES += "C")
-	@#printf "\r                                               \r$(words $(DONEFILES)) / $(NUMFILES) ($(notdir $<))"
-
 %.cpp.o: %.cpp
+	@echo "# $(notdir $<)"
 	@$(CXX) $(CXXFLAGS) -o $@ $<
-
-	@$(eval DONEFILES += "CPP")
-	@#printf "\r                                               \r$(words $(DONEFILES)) / $(NUMFILES) ($(notdir $<))"
 
 %.s.o: %.s
 	@$(AS) $< -o $@
-
-	@$(eval DONEFILES += "S")
-	@#printf "\r                                               \r$(words $(DONEFILES)) / $(NUMFILES) ($(notdir $<))"
 
 
 
