--- a/libs/libkrt/makefile
+++ b/libs/libkrt/makefile
@@ -2,16 +2,16 @@
 # Written in 2014
 
 
-CFLAGS		= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c11 -mno-red-zone -fno-exceptions -c
-CXXFLAGS	= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c++17 -mno-red-zone -fno-exceptions -fno-rtti -c
+CFLAGS		= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c11 -mno-red-zone -fno-strict-aliasing -fno-exceptions -c
+CXXFLAGS	= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c++17 -mno-red-zone -fno-strict-aliasing -fno-exceptions -fno-rtti -c
 
+SSRC		= $(shell find source -name "*.s")
 CSRC		= $(shell find source -name "*.c")
 CXXSRC		= $(shell find source -name "*.cpp")
-SSRC		= $(shell find source -name "*.s")
 
+SOBJ		= $(SSRC:.s=.s.o)
 COBJ		= $(CSRC:.c=.c.o)
 CXXOBJ		= $(CXXSRC:.cpp=.cpp.o)
-SOBJ		= $(SSRC:.s=.s.o)
 
 CXXDEPS     = $(CXXOBJ:.o=.d)
 CDEPS       = $(COBJ:.o=.d)
@@ -26,14 +26,16 @@ install: all
 
 all: libkrt.a
 
-libkrt.a: $(COBJ) $(CXXOBJ) $(SOBJ) $(HDRS)
-	@echo "# $(notdir $@)"
+libkrt.a: $(COBJ) $(CXXOBJ) $(SOBJ)
+	@echo "# libkrt"
 	@$(AR) rcs libkrt.a $(COBJ) $(CXXOBJ)
 
 %.c.o: %.c
+	@echo "# $(notdir $<)"
 	@$(CC) $(CFLAGS) -MMD -MP -Iinclude -o $@ $<
 
 %.cpp.o: %.cpp
+	@echo "# $(notdir $<)"
 	@$(CXX) $(CXXFLAGS) -MMD -MP -Iinclude -o $@ $<
 
 %.s.o: %.s
