--- a/libs/libm/makefile
+++ b/libs/libm/makefile
@@ -352,7 +352,7 @@ CFLAG           := $(CFLAGS) -std=gnu99 -Wall -Wextra -fPIC
 CPPFLAGS        := $(CPPFLAGS) -fPIC -I include -I src -I $(ARCH_SUBDIR)
 
 # TODO: Figure out whether these are the defines that we want to pass.
-CPPFLAGS        := $(CPPFLAGS) -D_MULTI_LIBM -D_POSIX_MODE
+CPPFLAGS        := $(CPPFLAGS) -D_IEEE_LIBM
 
 ARCH_SRCS       := $(addprefix $(ARCH_SUBDIR)/,$(ARCH_SRCS))
 COMMON_SRCS     := $(addprefix src/,$(COMMON_SRCS))
