we load the kernel ELF, and start virtual memory mapping.

--- a/efx/makefile
+++ b/efx/makefile
@@ -14,8 +14,11 @@ EFI_DIR     = zircon-efi
 EFI_INCS    = -I$(EFI_DIR)
 
 CXXSRC      = $(shell find source -name "*.cpp")
-CSRC        = $(shell find source -name "*.c") $(EFI_DIR)/platform/reloc_$(ARCH).c
-SSRC        = $(shell find source -name "*.s") $(EFI_DIR)/platform/crt0-efi-$(ARCH).s
+CSRC        = $(shell find source -name "*.c")
+SSRC        = $(shell find source -name "*.s")
+
+CSRC        += $(EFI_DIR)/platform/reloc_$(ARCH).c
+SSRC        += $(EFI_DIR)/platform/crt0-efi-$(ARCH).s
 
 COBJ        = $(CSRC:.c=.c.o)
 CXXOBJ      = $(CXXSRC:.cpp=.cpp.o)
@@ -29,7 +32,7 @@ CXXFLAGS    = -std=c++17 $(COMMONFLAGS)
 
 LDFLAGS     = -nostdlib -Bsymbolic -shared -L $(SYSROOT)/usr/lib
 
-LOADER      = efxloader
+LOADER      = $(SYSROOT)/boot/efxloader
 LIBM        = $(SYSROOT)/usr/lib/libm.a
 LIBKRT      = $(SYSROOT)/usr/lib/libkrt.a
 
@@ -37,49 +40,41 @@ CXXDEPS     = $(CXXOBJ:.o=.d)
 CDEPS       = $(COBJ:.o=.d)
 
 
--include $(CXXDEPS) $(CDEPS)
 
-
-.PHONY: all clean install
-
-install: all
-	@cp $(LOADER) $(SYSROOT)/boot/$(LOADER)
+.PHONY: all
 
 all: $(LOADER)
 
 $(LOADER): $(COBJ) $(CXXOBJ) $(SOBJ) $(LIBKRT) $(LIBM)
-	echo "# $(notdir $@)"
+	@echo "# $(notdir $@)"
 	@$(LD) $(LDFLAGS) -T $(EFI_DIR)/platform/elf_$(ARCH)_efi.lds -o efxloader.tmp $(SOBJ) $(COBJ) $(CXXOBJ) -lkrt -lm
 	@$(EFI_OBJCOPY) -j .text -j .sdata -j .data -j .dynamic -j .dynsym -j .rel -j .rela -j .reloc --target=efi-app-x86_64 efxloader.tmp $@
 	@rm efxloader.tmp
 
 %.c.o: %.c
-	echo "# $(notdir $<)"
+	@echo "# $(notdir $<)"
 	@$(CC) $(CFLAGS) -c -o $@ $<
 
 %.cpp.o: %.cpp
-	echo "# $(notdir $<)"
+	@echo "# $(notdir $<)"
 	@$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 %.s.o: %.s
-	echo "# $(notdir $<)"
+	@echo "# $(notdir $<)"
 	@$(AS) $< -o $@
 
-
 $(LIBM):
-	@$(MAKE) -C $(PROJECT_DIR)/libs/libm install
+	@$(MAKE) -C $(PROJECT_DIR)/libs/libm
 
 $(LIBKRT):
-	@$(MAKE) -C $(PROJECT_DIR)/libs/libkrt install
-
-
-clean:
-	@find . -name "*.o" -delete
+	@$(MAKE) -C $(PROJECT_DIR)/libs/libkrt
 
 
 
 
 
+
+-include $(CXXDEPS) $(CDEPS)
 
 
 
