--- a/kernel/makefile
+++ b/kernel/makefile
@@ -3,12 +3,10 @@
 # This makefile is licensed under the WTFPL
 
 
+WARNINGS			= -Wno-padded -Wno-cast-align -Wno-unreachable-code -Wno-switch-enum -Wno-packed -Wno-missing-noreturn -Wno-float-equal -Wno-old-style-cast -Wno-unused-macros
 
-WARNINGS			= -Wno-padded -Wno-c++98-compat-pedantic -Wno-c++98-compat -Wno-cast-align -Wno-unreachable-code -Wno-gnu -Wno-missing-prototypes -Wno-switch-enum -Wno-packed -Wno-missing-noreturn -Wno-float-equal -Wno-old-style-cast -Wno-exit-time-destructors -Wno-unused-macros -Wno-global-constructors -Wno-documentation-unknown-command -Wno-reserved-id-macro -Wno-c99-extensions
+CXXFLAGS			= -m64 -g -Wall -O2 -fno-omit-frame-pointer -fno-strict-aliasing -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -Iinclude -I$(SYSROOT)/usr/include -DORION_KERNEL=1 -mcmodel=kernel -c
 
-CXXFLAGS			= -m64 -g -Weverything -msse3 -integrated-as -O2 -fno-omit-frame-pointer -fno-strict-aliasing -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -I./source/Kernel/include -I./Libraries/Iris/HeaderFiles -I./Libraries/ -I$(SYSROOT)/usr/include -I$(SYSROOT)/usr/include/c++ -DORION_KERNEL=1 -target x86_64-elf -mcmodel=kernel -c
-
-LDFLAGS				= -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
 
 MEMORY				= 1024
 
@@ -18,9 +16,9 @@ CXXSRC				= $(shell find source -iname "*.cpp")
 SOBJ				= $(SSRC:.s=.s.o)
 CXXOBJ				= $(CXXSRC:.cpp=.cpp.o)
 
-CXXDEPS				= $(CXXOBJ:.o=.d)
+LDFLAGS				= -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
 
--include $(CXXDEPS)
+CXXDEPS				= $(CXXOBJ:.o=.d)
 
 .DEFAULT_GOAL = all
 KERNEL				= nxkernel64
@@ -29,17 +27,13 @@ LIBM                = $(SYSROOT)/usr/lib/libm.a
 LIBKRT              = $(SYSROOT)/usr/lib/libkrt.a
 
 
+.PHONY: all
 
-.PHONY: all build install
+all: $(SYSROOT)/boot/$(KERNEL)
 
-install: all
-	@cp $(KERNEL) $(SYSROOT)/boot/
-
-all: build
-
-build: $(KERNEL)
-
-$(KERNEL): $(SOBJ) $(CXXOBJ) $(LIBKRT) $(LIBM)
+$(SYSROOT)/boot/$(KERNEL): $(SOBJ) $(CXXOBJ) $(LIBKRT) $(LIBM)
+	@echo "# nxkernel"
+	@$(LD) $(LDFLAGS) -T link.ld -o $@ $(SOBJ) $(CXXOBJ) $(LIBKRT) $(LIBM)
 
 %.s.o: %.s
 	@echo "# $(notdir $<)"
@@ -52,6 +46,7 @@ $(KERNEL): $(SOBJ) $(CXXOBJ) $(LIBKRT) $(LIBM)
 
 
 
+-include $(CXXDEPS)
 
 
 
