abandon the proverbial font ship

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -3,35 +3,38 @@
 # This makefile is licensed under the WTFPL
 
 
-WARNINGS			= -Wno-padded -Wno-cast-align -Wno-unreachable-code -Wno-switch-enum -Wno-packed -Wno-missing-noreturn -Wno-float-equal -Wno-old-style-cast -Wno-unused-macros -pedantic-errors
+WARNINGS        = -Wno-padded -Wno-cast-align -Wno-unreachable-code -Wno-switch-enum -Wno-packed -Wno-missing-noreturn -Wno-float-equal -Wno-old-style-cast -Wno-unused-macros -pedantic-errors
 
-CXXFLAGS			= -m64 -g -Wall -O2 -fno-omit-frame-pointer -fno-strict-aliasing -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -Iinclude -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/tinflate -DORION_KERNEL=1 -mcmodel=kernel -c
+CXXFLAGS        = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -Iinclude -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/tinflate -DORION_KERNEL=1 -mcmodel=kernel -c
 
 
-MEMORY				= 1024
+SSRC            =  $(shell find source -name "platform" -prune -o -name "*.s" -print)
+SSRC            += $(shell find source/platform/$(ARCH) -iname "*.s")
 
-SSRC				=  $(shell find source -name "platform" -prune -o -name "*.s" -print)
-SSRC                += $(shell find source/platform/$(ARCH) -iname "*.s")
+CXXSRC          =  $(shell find source -name "platform" -prune -o -name "*.cpp" -print)
+CXXSRC          += $(shell find source/platform/$(ARCH) -iname "*.cpp")
 
-CXXSRC				=  $(shell find source -name "platform" -prune -o -name "*.cpp" -print)
-CXXSRC              += $(shell find source/platform/$(ARCH) -iname "*.cpp")
+SOBJ            = $(SSRC:.s=.s.o)
+CXXOBJ          = $(CXXSRC:.cpp=.cpp.o)
 
-SOBJ				= $(SSRC:.s=.s.o)
-CXXOBJ				= $(CXXSRC:.cpp=.cpp.o)
+CXXDEPS         = $(CXXOBJ:.o=.d)
 
-LDFLAGS				= -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
+DEBUG_FLAG      := -O0 -g
+LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
 
-CXXDEPS				= $(CXXOBJ:.o=.d)
 
-.DEFAULT_GOAL = all
-KERNEL				= nxkernel64
+KERNEL          = nxkernel64
 
-LIBM                = $(SYSROOT)/usr/lib/libm.a
-LIBKRT              = $(SYSROOT)/usr/lib/libkrt.a
-LIBTINFLATE         = $(SYSROOT)/usr/lib/libtinflate.a
-
+LIBM            = $(SYSROOT)/usr/lib/libm.a
+LIBKRT          = $(SYSROOT)/usr/lib/libkrt.a
+LIBTINFLATE     = $(SYSROOT)/usr/lib/libtinflate.a
 
 .PHONY: all
+.DEFAULT_GOAL = all
+
+
+
+
 
 all: $(SYSROOT)/boot/$(KERNEL)
 
@@ -45,7 +48,8 @@ $(SYSROOT)/boot/$(KERNEL): $(SOBJ) $(CXXOBJ) $(LIBKRT) $(LIBM) $(LIBTINFLATE)
 
 %.cpp.o: %.cpp
 	@echo "# $(notdir $<)"
-	@$(CXX) $(CXXFLAGS) $(WARNINGS) -MMD -MP -o $@ $<
+	@$(CXX) $(CXXFLAGS) $(WARNINGS) $(DEBUG_FLAG) -MMD -MP -o $@ $<
+
 
 
 
