cleanup, more work
moved the register stuff into asm macros.
basically all we should need to do now is write the scheduler and the thread creation stuff...

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -54,7 +54,7 @@ $(SYSROOT)/boot/$(KERNEL): $(SOBJ) $(COBJ) $(CXXOBJ) $(LIBKRT) $(LIBM) $(LIBTINF
 
 %.s.o: %.s
 	@echo "# $(notdir $<)"
-	@$(AS) $< -o $@
+	@$(AS) -Isource/platform/$(ARCH)/include $< -o $@
 
 %.cpp.o: %.cpp
 	@echo "# $(notdir $<)"
