don't print a backtrace if we die before the heap is initialised

--- a/utils/refind.conf
+++ b/utils/refind.conf
@@ -13,5 +13,5 @@ menuentry "[nx]" {
 	volume  871A56D0-2069-EE41-AC8E-0B67C148A150
 
 	loader  /boot/efxloader
-	options "root=UUID(871a56d0-2069-ee41-ac8e-0b67c148a150) kernel=/boot/nxkernel64 display=800x600 initrd=/boot/initrd.tar.gz -- no_acpi"
+	options "root=UUID(871a56d0-2069-ee41-ac8e-0b67c148a150) kernel=/boot/nxkernel64 display=800x600 initrd=/boot/initrd.tar.gz --"
 }
