add ubsan (thanks sortie)

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -5,27 +5,20 @@
 
 WARNINGS        = -Wno-padded -Wno-cast-align -Wno-unreachable-code -Wno-switch-enum -Wno-packed -Wno-missing-noreturn -Wno-float-equal -Wno-unused-macros # -pedantic-errors
 
-CFLAGS          = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -std=c11 -ffreestanding -mno-red-zone -mcmodel=kernel -c
-
 CXXFLAGS        = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -Wno-old-style-cast -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -mcmodel=kernel -c
 
 
 SSRC            =  $(shell find source -name "arch" -prune -o -name "*.s" -print)
 SSRC            += $(shell find source/arch/$(ARCH) -iname "*.s")
 
-CSRC            =  $(shell find source -name "arch" -prune -o -name "*.c" -print)
-CSRC            += $(shell find source/arch/$(ARCH) -iname "*.c")
-
 CXXSRC          =  $(shell find source -name "arch" -prune -o -name "*.cpp" -print)
 CXXSRC          += $(shell find source/arch/$(ARCH) -iname "*.cpp")
 
 
 SOBJ            = $(SSRC:.s=.s.o)
-COBJ            = $(CSRC:.c=.c.o)
 CXXOBJ          = $(CXXSRC:.cpp=.cpp.o)
 
 CXXDEPS         = $(CXXOBJ:.o=.d)
-CDEPS           = $(COBJ:.o=.d)
 
 DEBUG_FLAG      := -msse2 -O0 -g
 LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
@@ -42,6 +35,7 @@ LIBTINFLATE     = $(SYSROOT)/usr/lib/libtinflate.a
 .PHONY: all
 .DEFAULT_GOAL = all
 
+UBSAN_FLAG      = -fsanitize=undefined
 
 
 
@@ -58,11 +52,7 @@ $(SYSROOT)/boot/$(KERNEL): $(SOBJ) $(COBJ) $(CXXOBJ) $(LIBKRT) $(LIBM) $(LIBTINF
 
 %.cpp.o: %.cpp
 	@echo "# $(notdir $<)"
-	@$(CXX) $(CXXFLAGS) $(WARNINGS) $(DEFINES) $(INCLUDES) $(DEBUG_FLAG) -MMD -MP -o $@ $<
-
-%.c.o: %.c
-	@echo "# $(notdir $<)"
-	@$(CC) $(CFLAGS) $(WARNINGS) $(DEFINES) $(INCLUDES) $(DEBUG_FLAG) -MMD -MP -o $@ $<
+	@$(CXX) $(CXXFLAGS) $(UBSAN_FLAG) $(WARNINGS) $(DEFINES) $(INCLUDES) $(DEBUG_FLAG) -MMD -MP -o $@ $<
 
 
 
