userspace can now send ipc messages!!

--- a/drivers/placebo/makefile
+++ b/drivers/placebo/makefile
@@ -7,8 +7,8 @@ CXXFLAGS	= -Wno-pragmas -O2 -std=c++17 -fno-strict-aliasing
 
 all: $(INITRD_DIR)/drivers/placebo
 
-$(INITRD_DIR)/drivers/placebo: source/placebo.cpp $(SYSROOT)/usr/lib/libc.a
+$(INITRD_DIR)/drivers/placebo: source/placebo.cpp $(SYSROOT)/usr/lib/libc.a $(SYSROOT)/usr/lib/libnxpc.a
 	@echo "# placebo"
-	@$(CXX) $(CXXFLAGS) -o $@ source/placebo.cpp
+	@$(CXX) $(CXXFLAGS) -o $@ source/placebo.cpp -I$(PROJECT_DIR)/libs/libnxpc/include -lnxpc
 
 
