basic thread local storage implementation
slight detour, so we can implement ipc::poll() without using a system call

--- a/libs/libnxpc/makefile
+++ b/libs/libnxpc/makefile
@@ -19,6 +19,7 @@ CDEPS       = $(COBJ:.o=.d)
 
 
 all: $(SYSROOT)/usr/lib/libnxpc.a
+	@cp -r include/* $(SYSROOT)/usr/include/
 
 $(SYSROOT)/usr/lib/libnxpc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
 	@echo "# libnxpc"
