ipc messages can now be received

--- a/libs/libnxsc/makefile
+++ b/libs/libnxsc/makefile
@@ -1,8 +1,8 @@
 # Makefile for UnixCompatLibC.
 # Written in 2014
 
-CFLAGS		= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c11 -mno-red-zone -fno-strict-aliasing -fno-exceptions -c
-CXXFLAGS	= -ffreestanding -Wno-pragmas -O2 -fPIC -std=c++17 -mno-red-zone -fno-strict-aliasing -fno-exceptions -fno-rtti -c
+CFLAGS		= -Wno-pragmas -O2 -std=c11 -fno-strict-aliasing -c
+CXXFLAGS	= -Wno-pragmas -O2 -std=c++17 -fno-strict-aliasing -fno-exceptions -fno-rtti -c
 
 SSRC		= $(shell find source -name "*.s")
 CSRC		= $(shell find source -name "*.c")
@@ -15,15 +15,16 @@ CXXOBJ		= $(CXXSRC:.cpp=.cpp.o)
 CXXDEPS     = $(CXXOBJ:.o=.d)
 CDEPS       = $(COBJ:.o=.d)
 
+_UNUSED     := $(shell cp -r include/* $(SYSROOT)/usr/include/)
+
+
 .PHONY: all
 
+all: $(SYSROOT)/usr/lib/libnxsc.a
 
-all: $(SYSROOT)/usr/lib/libnxpc.a
-	@cp -r include/* $(SYSROOT)/usr/include/
-
-$(SYSROOT)/usr/lib/libnxpc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
-	@echo "# libnxpc"
-	@$(AR) rcs $(SYSROOT)/usr/lib/libnxpc.a $(SOBJ) $(COBJ) $(CXXOBJ)
+$(SYSROOT)/usr/lib/libnxsc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
+	@echo "# libnxsc"
+	@$(AR) rcs $(SYSROOT)/usr/lib/libnxsc.a $(SOBJ) $(COBJ) $(CXXOBJ)
 
 %.c.o: %.c
 	@echo "# $(notdir $<)"
