reorg + basic read/write (kinda)
1. toolchain now links libnxsc by default (see gcc patch)
2. tty server
3. vfs_read/write syscalls, that currently just... print to screen if the fd is 1 or 2
4. mmap syscalls, so we can setup the libc and hopefully have a heap?
5. printf appears to work!

--- a/libs/libnxsc/makefile
+++ b/libs/libnxsc/makefile
@@ -15,14 +15,12 @@ CXXOBJ		= $(CXXSRC:.cpp=.cpp.o)
 CXXDEPS     = $(CXXOBJ:.o=.d)
 CDEPS       = $(COBJ:.o=.d)
 
-_UNUSED     := $(shell cp -r include/* $(SYSROOT)/usr/include/)
-
 
 .PHONY: all
 
 all: $(SYSROOT)/usr/lib/libnxsc.a
 
-$(SYSROOT)/usr/lib/libnxsc.a: $(COBJ) $(CXXOBJ) $(SOBJ)
+$(SYSROOT)/usr/lib/libnxsc.a: $(SOBJ) $(COBJ) $(CXXOBJ)
 	@echo "# libnxsc"
 	@$(AR) rcs $(SYSROOT)/usr/lib/libnxsc.a $(SOBJ) $(COBJ) $(CXXOBJ)
 
