--- a/kernel/makefile
+++ b/kernel/makefile
@@ -24,7 +24,7 @@ DEBUG_FLAG      := -msse2 -O0 -g
 LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
 
 DEFINES         = -DORION_KERNEL=1 -D__ARCH_x64__=1
-INCLUDES        = -Iinclude -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/tinflate -I$(PROJECT_DIR)/efx/zircon-efi
+INCLUDES        = -Iinclude -I$(PROJECT_DIR)/libs -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/tinflate -I$(PROJECT_DIR)/efx/zircon-efi
 
 KERNEL          = nxkernel64
 
